config/interior-designer/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interior-designer
  labels:
    app.kubernetes.io/part-of: interior-designer
